Made drastic improvements on the visuals of the Cloned website

--- a/apps/Google.html
+++ b/apps/Google.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html style="background-color: white; height: 100%; margin: 0%; padding: 0%">
+<html style="background-color: white; height: 100%; width: 100%; margin: 0px; padding: 0px">
   <head>
     <meta charset="utf-8">
 
     <title>Google</title>
   </head>
 
-  <body>
-    <header>
+  <body style="height: 97%">
+    <header style="width: 100%; vertical-align: middle; height: 7%;">
       <div align="right">
         <span>
           <a href="#">Gmail</a>
@@ -18,16 +18,18 @@
       </div>
     </header>
     <!-- Here is our page's main content -->
-    <main style="padding: 0; margin: 0">
-      <div align="center" style="width:800px; margin: auto; height: auto;">
-        <form>
-          <input type="Text" name="">
-          <div>
+    <main style="padding: 0; margin: 0; height: 86%; vertical-align: middle;">
+      <div align="center" style="width:800px; margin: auto; height: inherit;">
+        
+        <img src="googleLogo.png" alt="Smiley face" width="300px" style="padding-top: 80px">
+        <form style="padding-top: 20px">
+          <input type="Text" style="width: 500px; height: 35px;">
+          <div style="padding-top: 20px">
             <input value="Google Search" type="submit">
             <input value="I'm Feeling Lucky" type="submit">
           </div>
         </form>
-        <div>
+        <div style="padding-top: 20px">
           Google.com.ng offered in:
           <a href="#">Hausa</a>
           <a href="#">Igbo</a>
@@ -37,21 +39,19 @@
       </div>
     </main>
 
-    <footer style="position:absolute; margin-left: 10px; bottom:10px; margin-right: 10px;">
-      <div align="right">
-        <span style="float: left;">
-          <a href="#">Advertising</a>
-          <a href="#">Business</a>
-          <a href="#">About</a>
-        </span>
-        <span>
-          <a href="#">Privacy</a>
-          <a href="#">Terms</a>
-          <a href="#">Settings</a>
-          <a href="#">Use Google.com</a>
-        </span>
-      </div>
-    </footer>
+    <div style="bottom: 0px; width: inherit; height: 7%; vertical-align: bottom;">
+       <span style="display: block; float: left;">
+        <a href="#">Advertising</a>
+        <a href="#">Business</a>
+        <a href="#">About</a>
+      </span>
+      <span style="display: block; float: right;">
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Settings</a>
+        <a href="#">Use Google.com</a>
+      </span>
+    </div>
 
   </body>
 </html>
