Implemented stylesheets for the clone website.

--- a/apps/Google.html
+++ b/apps/Google.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html style="background-color: white; height: 100%; width: 100%; margin: 0px; padding: 0px">
+<html class="fullWidth">
   <head>
     <meta charset="utf-8">
-
     <title>Google</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
 
-  <body style="height: 97%">
-    <header style="width: 100%; vertical-align: middle; height: 7%;">
+  <body>
+    <header class="fullWidth">
       <div align="right">
         <span>
           <a href="#">Gmail</a>
@@ -18,18 +18,18 @@
       </div>
     </header>
     <!-- Here is our page's main content -->
-    <main style="padding: 0; margin: 0; height: 86%; vertical-align: middle;">
-      <div align="center" style="width:800px; margin: auto; height: inherit;">
+    <main class="main">
+      <div class="uniqueDiv" align="center">
         
-        <img src="googleLogo.png" alt="Smiley face" width="300px" style="padding-top: 80px">
-        <form style="padding-top: 20px">
-          <input type="Text" style="width: 500px; height: 35px;">
-          <div style="padding-top: 20px">
+        <img class="image" src="googleLogo.png" alt="Smiley face" width="300px">
+        <form class="top20">
+          <input class="textInput" type="Text">
+          <div class="top20">
             <input value="Google Search" type="submit">
             <input value="I'm Feeling Lucky" type="submit">
           </div>
         </form>
-        <div style="padding-top: 20px">
+        <div class="top20">
           Google.com.ng offered in:
           <a href="#">Hausa</a>
           <a href="#">Igbo</a>
@@ -39,13 +39,13 @@
       </div>
     </main>
 
-    <div style="bottom: 0px; width: inherit; height: 7%; vertical-align: bottom;">
-       <span style="display: block; float: left;">
+    <div class="footer">
+       <span style="float: left;">
         <a href="#">Advertising</a>
         <a href="#">Business</a>
         <a href="#">About</a>
       </span>
-      <span style="display: block; float: right;">
+      <span style="float: right;">
         <a href="#">Privacy</a>
         <a href="#">Terms</a>
         <a href="#">Settings</a>
